RESOLVED FIXED183119
[GStreamer] User current executable name instead of g_get_prgname() for gst_init
https://bugs.webkit.org/show_bug.cgi?id=183119
Summary [GStreamer] User current executable name instead of g_get_prgname() for gst_init
Carlos Garcia Campos
Reported 2018-02-26 01:25:48 PST
g_get_prgname() is only set for programs using GOptionContext, calling gtk_init or explicitly calling g_set_prgname().
Attachments
Patch (3.67 KB, patch)
2018-02-26 01:28 PST, Carlos Garcia Campos
pnormand: review+
Carlos Garcia Campos
Comment 1 2018-02-26 01:28:43 PST
Carlos Garcia Campos
Comment 2 2018-02-26 01:44:03 PST
Radar WebKit Bug Importer
Comment 3 2018-02-26 01:45:27 PST
Note You need to log in before you can comment on or make changes to this bug.