[GStreamer] User current executable name instead of g_get_prgname() for gst_init https://bugs.webkit.org/show_bug.cgi?id=183119

Reviewed by Philippe Normand.

Source/WebCore:

g_get_prgname() is only set for programs using GOptionContext, calling gtk_init or explicitly calling
g_set_prgname(). Use WTF::getCurrentExecutableName() instead.

* platform/graphics/gstreamer/GStreamerUtilities.cpp:
(WebCore::initializeGStreamer):

Source/WTF:

Add getCurrentExecutableName() helper function to get the name of the current executable.

* wtf/glib/GLibUtilities.cpp:
(getCurrentExecutableName): Get the basename of getCurrentExecutablePath() falling back to g_get_prgname().
* wtf/glib/GLibUtilities.h:

Canonical link: https://commits.webkit.org/198842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228987 268f45cc-cd09-0410-ab3c-d52691b4dbfc